Solve Day1 Part 2
Co-authored-by: Mark Crossfield <mark.crossfield@autotrader.co.uk>